0826変数・定数宣言

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="practice.js"></script>
   </head>
   <body>
-    <input type="button" value="OK" onclick="ohayou()" />
+    <input type="button" value="js外部ファイル" onclick="ohayou()" />
   </body>
 </html>
