0905厳格モードになりエラーが出る

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <input type="button" value="js外部ファイル" onclick="ohayou()" />
+    <script type="module" src="practice.js"></script>
   </body>
 </html>
