ファイルの分割

--- a/koubun/koubun.html
+++ b/koubun/koubun.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>practice-js</title>
-    <script src="practice.js"></script>
+    <title>practice-js-koubun</title>
+    <script src="koubun.js"></script>
   </head>
   <body>
     <input type="button" value="js外部ファイル" onclick="ohayou()" />
-    <script type="module" src="practice.js"></script>
+    <script type="module" src="koubun.js"></script>
 
     <script>
       function func() {
