--- a/suuchi-mojiretsu-teisuu/mojiretsu/teisuu/suuchi-mojiretsu-teisuu.html
+++ b/suuchi-mojiretsu-teisuu/mojiretsu/teisuu/suuchi-mojiretsu-teisuu.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>practice-js-enzanshi</title>
-    <script src="enzanshi.js"></script>
-    <!-- <a href="javascript:void(0)"></a> -->
+    <script src="suuchi-mojiretsu-teisuu.js"></script>
   </head>
   <body>
-    演算子
+    数値・文字列・定数
   </body>
 </html>
