--- a/tokusyuhensu-jakusansyo/tokusyuhensu-jakusansyo.html
+++ b/tokusyuhensu-jakusansyo/tokusyuhensu-jakusansyo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>practice-js-enzanshi</title>
-    <script src="suuchi-mojiretsu-teisuu.js"></script>
+    <script src="tokusyuhensu-jakusansyo.js"></script>
   </head>
   <body>
     数値・文字列・定数
