--- a/event/event.html
+++ b/event/event.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>practice-js-enzanshi</title>
-    <script src="tokusyuhensu-jakusansyo.js"></script>
+    <script src="event.js"></script>
   </head>
   <body>
-    特殊変数・弱参照
+    イベントハンドラ<br />
+    <input type="button" value="OK" onclick="alert('OK!')" />
+    <input type="button" value="AB" onclick="alert('A');alert('B')" />
   </body>
 </html>
