フォルダ名等の修正

--- a/3.tokusyuhensu-jakusansyo/tokusyuhensu-jakusansyo.html
+++ b/3.tokusyuhensu-jakusansyo/tokusyuhensu-jakusansyo.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>practice-js-enzanshi</title>
-    <script src="enzanshi.js"></script>
-    <!-- <a href="javascript:void(0)"></a> -->
+    <title>practice-js</title>
+    <script src="tokusyuhensu-jakusansyo.js"></script>
   </head>
   <body>
-    演算子
+    特殊変数・弱参照
   </body>
 </html>
