--- a/5.builtin/builtin.html
+++ b/5.builtin/builtin.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>practice-js-enzanshi</title>
-    <script src="tokusyuhensu-jakusansyo.js"></script>
+    <title>practice-js</title>
+    <script src="builtin.html"></script>
   </head>
   <body>
-    特殊変数・弱参照
+    ビルトイン関数
   </body>
 </html>
